--- a/.env.win32.example
+++ b/.env.win32.example
@@ -8,5 +8,8 @@
 TINY_VCPKG_ROOT = $$quote(E:/xyz/vcpkg/)
 TINY_VCPKG_TRIPLET = x64-windows
 
+# MySQL C library (default installation path is auto-detected)
+#TINY_MYSQL_ROOT = $$quote($$(ProgramFiles)/MySQL/MySQL Server 8.1/)
+
 # Enable ccache wrapper
 #CONFIG *= tiny_ccache_win32
