added/used ccache in .env

--- a/.env.unix.example
+++ b/.env.unix.example
@@ -8,6 +8,9 @@
 TINY_VCPKG_ROOT = $$quote(/home/xyz/Code/c/vcpkg/)
 TINY_VCPKG_TRIPLET = x64-linux
 
+# Enable ccache wrapper
+#CONFIG *= ccache
+
 # Use faster linker
 clang: CONFIG *= use_lld_linker
 else: CONFIG *= use_gold_linker
