--- a/.env.win32.example
+++ b/.env.win32.example
@@ -12,4 +12,4 @@ TINY_VCPKG_TRIPLET = x64-windows
 #TINY_MYSQL_ROOT = $$quote($$(ProgramFiles)/MySQL/MySQL Server 8.1/)
 
 # Enable ccache wrapper
-#CONFIG *= tiny_ccache_win32
+#CONFIG *= ccache
