--- a/.env.unix.example
+++ b/.env.unix.example
@@ -4,12 +4,8 @@
 # Path to the TinyORM build folder
 #TINYORM_BUILD_TREE = $$quote($$TINY_MAIN_DIR/TinyORM-builds-qmake/build-TinyORM-Desktop_Qt_6_5_3_clang16_64bit_ccache-Debug/)
 
-# vcpkg - range-v3
-TINY_VCPKG_ROOT = $$quote(/home/xyz/Code/c/vcpkg/)
-TINY_VCPKG_TRIPLET = x64-linux
-
-# Enable ccache wrapper
-#CONFIG *= ccache
+# Enable ccache wrapper and PCH
+#CONFIG *= ccache precompile_header
 
 # Use faster linker
 clang: CONFIG *= use_lld_linker
@@ -17,3 +13,7 @@ else: CONFIG *= use_gold_linker
 
 # Or use the mold linker
 #QMAKE_LFLAGS *= -fuse-ld=mold
+
+# vcpkg - range-v3
+TINY_VCPKG_ROOT = $$quote(/home/xyz/Code/c/vcpkg/)
+TINY_VCPKG_TRIPLET = x64-linux
