updated .env example files
Prefer LLD linker for Clang.

--- a/.env.mingw.example
+++ b/.env.mingw.example
@@ -11,6 +11,6 @@
 TINY_VCPKG_ROOT = $$quote(C:/msys64/home/xyz/Code/vcpkg/)
 TINY_VCPKG_TRIPLET = x64-mingw-dynamic
 
-# Use faster linker (for both GCC and Clang)
+# Prefer LLD linker for Clang
 # CONFIG *= use_lld_linker does not work on MinGW
-QMAKE_LFLAGS *= -fuse-ld=lld
+clang: QMAKE_LFLAGS *= -fuse-ld=lld
