--- a/.env.unix.example
+++ b/.env.unix.example
@@ -7,7 +7,7 @@
 # Enable ccache wrapper and PCH
 #CONFIG *= ccache precompile_header
 
-# Use faster linker
+# Prefer LLD linker for Clang
 clang: CONFIG *= use_lld_linker
 else: CONFIG *= use_gold_linker
 
